--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     compile(
             "org.springframework.boot:spring-boot-starter-web:${springBootVersion}",
             "org.springframework.boot:spring-boot-starter-web-services:${springBootVersion}",
-            "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}",
+//            "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}",
             "org.postgresql:postgresql:${postgresqlVersion}",
     )
 
