--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 项目数据源配置 #
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/gomro_cloud
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gomro_cloud
+#spring.datasource.username=root
+#spring.datasource.password=root
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
