--- a/build.gradle
+++ b/build.gradle
@@ -19,21 +19,19 @@ repositories {
 }
 dependencies {
     compile(
+            "org.apache.poi:poi:${poiVersion}",
+            "com.h2database:h2:${h2dbiVersion}",
+            "org.springframework:spring-context-support:4+",
             "org.springframework.boot:spring-boot-starter-web:${springBootVersion}",
             "org.springframework.boot:spring-boot-starter-web-services:${springBootVersion}",
             "org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}",
             "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}",
-//            "org.postgresql:postgresql:${postgresqlVersion}",
     )
-    compile group: 'com.h2database', name: 'h2', version: '1+'
-
-
     compile("net.sf.jasperreports:jasperreports:${jasperreportsVersion}") {
         exclude group: 'com.lowagie'
         exclude group: 'org.olap4j'
     }
     compile("org.olap4j:olap4j:${olap4jVersion}",
             "com.lowagie:itext:${itextVersion}")
-    compile ("org.springframework:spring-context-support:4+")
 
 }
