--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 repositories {
     maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     mavenCentral()
@@ -21,6 +22,7 @@ dependencies {
     compile(
             "org.apache.poi:poi:${poiVersion}",
             "com.h2database:h2:${h2dbiVersion}",
+            "org.activiti:activiti-spring-boot-starter-basic:${activitiVersion}",
             "org.springframework:spring-context-support:4+",
             "org.springframework.boot:spring-boot-starter-web:${springBootVersion}",
             "org.springframework.boot:spring-boot-starter-web-services:${springBootVersion}",
@@ -33,5 +35,6 @@ dependencies {
     }
     compile("org.olap4j:olap4j:${olap4jVersion}",
             "com.lowagie:itext:${itextVersion}")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 
 }
